<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.StoryApp.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.StoryApp.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_48">

        <TextView
            android:id="@+id/widget_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="?android:attr/textColorPrimary"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/refresh_story_button"
            android:layout_width="@dimen/dim_48"
            android:layout_height="@dimen/dim_48"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/app_widget_description"
            android:src="@drawable/ic_refresh"
            android:tint="?android:attr/colorAccent"
            tools:ignore="UseAppTint" />

        <ImageButton
            android:id="@+id/create_story_button"
            android:layout_width="@dimen/dim_48"
            android:layout_height="@dimen/dim_48"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/create_new"
            android:src="@drawable/ic_add"
            android:tint="?android:attr/colorAccent"
            tools:ignore="UseAppTint" />
    </LinearLayout>

    <StackView
        android:id="@+id/list_grid_stories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dim_48"
        android:gravity="center"
        android:loopViews="true"
        tools:listitem="@layout/widget_item" />

    <TextView
        android:id="@+id/empty_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dim_48"
        android:gravity="center"
        android:text="@string/unknown_error"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</FrameLayout>
