<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    app:paddingTopSystemWindowInsets="true"
    tools:context=".ui.camera.CameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_camera"
        style="@style/Widget.StoryApp.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_16"
        android:layout_marginEnd="@dimen/dim_16"
        android:contentDescription="@string/camera_close"
        app:icon="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/capture"
        style="@style/Widget.StoryApp.IconButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/camera_take"
        android:enabled="false"
        android:paddingStart="@dimen/dim_12"
        android:paddingTop="@dimen/dim_12"
        android:paddingEnd="@dimen/dim_12"
        android:paddingBottom="@dimen/dim_12"
        app:icon="@drawable/circle"
        app:iconSize="@dimen/dim_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_button" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cameraProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_switch_button"
        style="@style/Widget.StoryApp.IconButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/camera_flip"
        android:enabled="false"
        app:icon="@drawable/ic_rotate"
        app:iconSize="@dimen/dim_32"
        app:layout_constraintBottom_toBottomOf="@id/capture"
        app:layout_constraintEnd_toStartOf="@id/capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/capture" />
</androidx.constraintlayout.widget.ConstraintLayout>
